# image-to-pdf

./: .gitignore  DESIGN.md  README.md  pyproject.toml  pytest.ini
src/: main.py
src/core/: image_loader.py  pdf_builder.py  pdf_extractor.py
src/ui/: app_window.py  extractor_dialog.py  preview_dialog.py
tests/: conftest.py  test_helpers.py  test_image_loader.py  test_logging_sanitation.py  test_pdf_builder.py
